fixed transparency on IE11, and added more descriptive README

--- a/resources/css/projects.processed.css
+++ b/resources/css/projects.processed.css
@@ -77,8 +77,10 @@
   box-shadow: 0 0 0 15px var(--dark);
 }
 
-.proj-panel .content {
+.proj-panel .proj-bg div {
   background-color: rgba(0, 0, 0, 0.75);
+  height: 100%;
+  width: 100%;
 }
 
 .proj-info {
